Seat-wise booking logic